# internal/models/request_models/login_request.go
@@ -1,1 +1,12 @@
 package request_models
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
+
+type SignUpRequest struct {
+	DisplayName string `json:"display_name" binding:"required,min=3,max=50"`
+	Email       string `json:"email" binding:"required,email"`
+	Password    string `json:"password" binding:"required,min=6"`
+}
